--- a/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
@@ -21,14 +21,7 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_tags:
-    weight: 1
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
 hidden:
   field_background_color: true
   field_background_image: true
+  field_tags: true
