--- a/config/sync/core.entity_view_display.paragraph.long_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.long_course_list_.default.yml
@@ -3,19 +3,40 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.long_course_list_.field_background_color
+    - field.field.paragraph.long_course_list_.field_background_image
     - field.field.paragraph.long_course_list_.field_course_id
+    - field.field.paragraph.long_course_list_.field_heading
+    - field.field.paragraph.long_course_list_.field_link
     - paragraphs.paragraphs_type.long_course_list_
+  module:
+    - link
 id: paragraph.long_course_list_.default
 targetEntityType: paragraph
 bundle: long_course_list_
 mode: default
 content:
-  field_course_id:
-    weight: 1
-    label: above
+  field_heading:
+    weight: 0
+    label: hidden
     settings:
-      link: true
+      link_to_entity: false
     third_party_settings: {  }
-    type: entity_reference_label
+    type: string
     region: content
-hidden: {  }
+  field_link:
+    weight: 1
+    label: hidden
+    settings:
+      trim_length: null
+      url_only: false
+      url_plain: false
+      rel: '0'
+      target: '0'
+    third_party_settings: {  }
+    type: link
+    region: content
+hidden:
+  field_background_color: true
+  field_background_image: true
+  field_course_id: true
