--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.teaser
     - field.storage.node.body
     - node.type.news
   module:
@@ -340,31 +341,54 @@ display:
           expose:
             label: ''
           granularity: second
-      header:
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          tokenize: false
-          content:
-            value: '<div class="fpnews-base-title"><h2><a href="nyheder">Nyheder</a></h2></div>'
-            format: rich_text
-          plugin_id: text
+      header: {  }
       footer: {  }
       empty: {  }
       relationships: {  }
-      arguments: {  }
+      arguments:
+        field_news_tags_target_id:
+          id: field_news_tags_target_id
+          table: node__field_news_tags
+          field: field_news_tags_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: ignore
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: true
+          not: false
+          plugin_id: numeric
       display_extenders: {  }
-      css_class: rowsss
+      css_class: 'row row--equal-height-columns'
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags:
@@ -372,15 +396,31 @@ display:
   embedded_teaser_list:
     display_plugin: embed
     id: embedded_teaser_list
-    display_title: Embed
+    display_title: 'Embed - teaser'
     position: 1
     display_options:
       display_extenders: {  }
+      display_description: ''
+      style:
+        type: default
+        options:
+          row_class: 'col-xs-12 col-sm-4'
+          default_row_class: true
+          uses_fields: false
+      defaults:
+        style: false
+        row: false
+      row:
+        type: 'entity:node'
+        options:
+          relationship: none
+          view_mode: teaser
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags:
