--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.event.field_vih_course_heading
     - field.field.node.event.field_vih_course_subheading
     - field.field.node.event.field_vih_event_persons_limit
+    - field.field.node.event.field_vih_event_status
     - node.type.event
   module:
     - datetime
@@ -30,7 +31,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 10
+    weight: 11
     settings:
       rows: 9
       summary_rows: 3
@@ -39,32 +40,32 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     region: content
   field_event_end_date:
-    weight: 13
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_event_price:
-    weight: 15
+    weight: 16
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_event_start_date:
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_image:
     type: entity_browser_file
-    weight: 11
+    weight: 12
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -77,7 +78,7 @@ content:
     region: content
   field_page_main_image:
     type: entity_browser_file
-    weight: 14
+    weight: 15
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -89,7 +90,7 @@ content:
     third_party_settings: {  }
     region: content
   field_paragraphs:
-    weight: 16
+    weight: 17
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -101,7 +102,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_vih_cource_contact_person:
-    weight: 18
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
@@ -126,22 +127,28 @@ content:
     type: string_textfield
     region: content
   field_vih_event_persons_limit:
-    weight: 4
+    weight: 5
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
+  field_vih_event_status:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   langcode:
     type: language_select
-    weight: 3
+    weight: 4
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -149,21 +156,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 8
     third_party_settings: {  }
     region: content
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 17
+    weight: 18
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     third_party_settings: {  }
     region: content
   title:
@@ -176,7 +183,7 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
