--- a/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
@@ -10,7 +10,9 @@ dependencies:
     - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
     - field.field.node.vih_long_cource.field_vih_course_periods
+    - field.field.node.vih_long_cource.field_vih_course_persons_limit
     - field.field.node.vih_long_cource.field_vih_course_price
+    - field.field.node.vih_long_cource.field_vih_course_status
     - field.field.node.vih_long_cource.field_vih_course_subheading
     - field.field.node.vih_long_cource.field_vih_course_subsc_price
     - field.field.node.vih_long_cource.field_vih_course_week_price
@@ -28,7 +30,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 10
+    weight: 12
     settings:
       rows: 9
       summary_rows: 3
@@ -37,12 +39,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     region: content
   field_paragraphs:
-    weight: 17
+    weight: 19
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -54,7 +56,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_vih_cource_contact_person:
-    weight: 15
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -72,7 +74,7 @@ content:
     region: content
   field_vih_course_image:
     type: entity_browser_file
-    weight: 16
+    weight: 18
     settings:
       entity_browser: image_browser
       field_widget_remove: true
@@ -84,7 +86,7 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_course_periods:
-    weight: 11
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
@@ -92,12 +94,25 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_vih_course_price:
-    weight: 12
+  field_vih_course_persons_limit:
+    weight: 3
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
+    region: content
+  field_vih_course_price:
+    weight: 14
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: number
+    region: content
+  field_vih_course_status:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_vih_course_subheading:
     weight: 2
@@ -108,14 +123,14 @@ content:
     type: string_textfield
     region: content
   field_vih_course_subsc_price:
-    weight: 13
+    weight: 15
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_course_week_price:
-    weight: 14
+    weight: 16
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -123,13 +138,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 3
-    settings: {  }
+    weight: 5
+    settings:
+      include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 9
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -137,14 +153,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 9
     third_party_settings: {  }
     region: content
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 20
+    region: content
+    third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 10
     third_party_settings: {  }
     region: content
   title:
@@ -156,13 +179,13 @@ content:
     third_party_settings: {  }
     region: content
   translation:
-    weight: 5
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 4
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
