--- a/config/sync/core.entity_form_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_short_course.default.yml
@@ -12,8 +12,10 @@ dependencies:
     - field.field.node.vih_short_course.field_vih_sc_end_date
     - field.field.node.vih_short_course.field_vih_sc_image
     - field.field.node.vih_short_course.field_vih_sc_option_groups
+    - field.field.node.vih_short_course.field_vih_sc_persons_limit
     - field.field.node.vih_short_course.field_vih_sc_price
     - field.field.node.vih_short_course.field_vih_sc_start_date
+    - field.field.node.vih_short_course.field_vih_sc_status
     - field.field.node.vih_short_course.scheduled_update
     - node.type.vih_short_course
   module:
@@ -31,7 +33,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 10
+    weight: 11
     settings:
       rows: 9
       summary_rows: 3
@@ -40,12 +42,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     region: content
   field_paragraphs:
-    weight: 15
+    weight: 16
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -73,7 +75,7 @@ content:
     type: string_textfield
     region: content
   field_vih_cs_contact_person:
-    weight: 13
+    weight: 14
     settings:
       match_operator: CONTAINS
       size: 60
@@ -82,14 +84,14 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_sc_end_date:
-    weight: 18
+    weight: 19
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_vih_sc_image:
     type: entity_browser_file
-    weight: 14
+    weight: 15
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -102,7 +104,7 @@ content:
     region: content
   field_vih_sc_option_groups:
     type: entity_reference_paragraphs
-    weight: 12
+    weight: 13
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -112,29 +114,42 @@ content:
       default_paragraph_type: ''
     third_party_settings: {  }
     region: content
+  field_vih_sc_persons_limit:
+    weight: 21
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: number
+    region: content
   field_vih_sc_price:
-    weight: 11
+    weight: 12
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_sc_start_date:
-    weight: 17
+    weight: 18
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
+  field_vih_sc_status:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   langcode:
     type: language_select
-    weight: 3
+    weight: 4
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -142,11 +157,11 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 8
     third_party_settings: {  }
     region: content
   scheduled_update:
-    weight: 16
+    weight: 17
     settings:
       form_mode: default
       override_labels: false
@@ -162,14 +177,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 19
+    weight: 20
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     third_party_settings: {  }
     region: content
   title:
@@ -181,13 +196,13 @@ content:
     third_party_settings: {  }
     region: content
   translation:
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 4
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
