--- a/config/sync/core.entity_view_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.default.yml
@@ -11,8 +11,10 @@ dependencies:
     - field.field.node.vih_short_course.field_vih_sc_end_date
     - field.field.node.vih_short_course.field_vih_sc_image
     - field.field.node.vih_short_course.field_vih_sc_option_groups
+    - field.field.node.vih_short_course.field_vih_sc_persons_limit
     - field.field.node.vih_short_course.field_vih_sc_price
     - field.field.node.vih_short_course.field_vih_sc_start_date
+    - field.field.node.vih_short_course.field_vih_sc_status
     - field.field.node.vih_short_course.scheduled_update
     - node.type.vih_short_course
   module:
@@ -36,12 +38,12 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
   field_paragraphs:
-    weight: 106
+    weight: 6
     label: hidden
     settings:
       view_mode: default
@@ -50,7 +52,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_vih_course_heading:
-    weight: 111
+    weight: 10
     label: above
     settings:
       link_to_entity: false
@@ -58,7 +60,7 @@ content:
     type: string
     region: content
   field_vih_course_subheading:
-    weight: 112
+    weight: 11
     label: above
     settings:
       link_to_entity: false
@@ -66,7 +68,7 @@ content:
     type: string
     region: content
   field_vih_cs_contact_person:
-    weight: 104
+    weight: 4
     label: hidden
     settings:
       view_mode: compact
@@ -75,7 +77,7 @@ content:
     type: entity_reference_entity_view
     region: content
   field_vih_sc_end_date:
-    weight: 110
+    weight: 9
     label: hidden
     settings:
       timezone_override: ''
@@ -84,7 +86,7 @@ content:
     type: datetime_default
     region: content
   field_vih_sc_image:
-    weight: 105
+    weight: 5
     label: above
     settings:
       image_style: ''
@@ -94,15 +96,24 @@ content:
     region: content
   field_vih_sc_option_groups:
     type: entity_reference_revisions_entity_view
-    weight: 103
+    weight: 3
     label: above
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     region: content
+  field_vih_sc_persons_limit:
+    weight: 12
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
   field_vih_sc_price:
-    weight: 102
+    weight: 2
     label: hidden
     settings:
       thousand_separator: ''
@@ -113,7 +124,7 @@ content:
     type: number_decimal
     region: content
   field_vih_sc_start_date:
-    weight: 109
+    weight: 8
     label: hidden
     settings:
       timezone_override: ''
@@ -122,12 +133,12 @@ content:
     type: datetime_default
     region: content
   links:
-    weight: 100
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduled_update:
-    weight: 108
+    weight: 7
     label: above
     settings:
       link: true
@@ -138,4 +149,5 @@ content:
     weight: -20
     region: content
 hidden:
+  field_vih_sc_status: true
   langcode: true
