Output front banner as image path

--- a/config/sync/core.entity_form_display.paragraph.vih_class_groups_accordion.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_class_groups_accordion.default.yml
@@ -27,5 +27,9 @@ content:
     region: content
 hidden:
   created: true
+  field_background_color: true
+  field_background_image: true
+  field_heading: true
+  field_link: true
   status: true
   uid: true
