--- a/config/sync/core.entity_view_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_view_display.block_content.banner.default.yml
@@ -16,12 +16,11 @@ bundle: banner
 mode: default
 content:
   field_image:
-    type: image
+    type: image_url
     weight: 0
     label: hidden
     settings:
       image_style: banner
-      image_link: ''
     third_party_settings: {  }
     region: content
   field_link:
