Get modal and favicon working

--- a/config/sync/core.entity_view_display.node.vih_long_cource.list_advanced.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.list_advanced.yml
@@ -10,11 +10,13 @@ dependencies:
     - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
     - field.field.node.vih_long_cource.field_vih_course_periods
+    - field.field.node.vih_long_cource.field_vih_course_persons_limit
     - field.field.node.vih_long_cource.field_vih_course_price
+    - field.field.node.vih_long_cource.field_vih_course_status
     - field.field.node.vih_long_cource.field_vih_course_subheading
     - field.field.node.vih_long_cource.field_vih_course_subsc_price
     - field.field.node.vih_long_cource.field_vih_course_week_price
-    - image.style.vih_general_teaser_image
+    - image.style.list_advanced
     - node.type.vih_long_cource
   module:
     - image
@@ -239,7 +241,7 @@ content:
     weight: 0
     label: hidden
     settings:
-      image_style: vih_general_teaser_image
+      image_style: list_advanced
       image_link: ''
     third_party_settings: {  }
     region: content
@@ -248,7 +250,9 @@ hidden:
   field_vih_cource_contact_person: true
   field_vih_course_heading: true
   field_vih_course_periods: true
+  field_vih_course_persons_limit: true
   field_vih_course_price: true
+  field_vih_course_status: true
   field_vih_course_subheading: true
   field_vih_course_subsc_price: true
   field_vih_course_week_price: true
