--- a/config/sync/core.entity_form_display.paragraph.vih_class_groups_accordion.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_class_groups_accordion.default.yml
@@ -3,9 +3,16 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.vih_class_groups_accordion.field_background_color
+    - field.field.paragraph.vih_class_groups_accordion.field_background_image
+    - field.field.paragraph.vih_class_groups_accordion.field_heading
+    - field.field.paragraph.vih_class_groups_accordion.field_link
     - field.field.paragraph.vih_class_groups_accordion.field_vih_cg_single_class_groups
+    - image.style.thumbnail
     - paragraphs.paragraphs_type.vih_class_groups_accordion
   module:
+    - image
+    - link
     - paragraphs
     - workbench_moderation
 id: paragraph.vih_class_groups_accordion.default
@@ -13,9 +20,44 @@ targetEntityType: paragraph
 bundle: vih_class_groups_accordion
 mode: default
 content:
+  field_background_color:
+    type: options_select
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_background_image:
+    type: entity_browser_file
+    weight: 4
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
+  field_heading:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_link:
+    type: link_default
+    weight: 2
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
   field_vih_cg_single_class_groups:
     type: entity_reference_paragraphs
-    weight: 6
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -27,9 +69,5 @@ content:
     region: content
 hidden:
   created: true
-  field_background_color: true
-  field_background_image: true
-  field_heading: true
-  field_link: true
   status: true
   uid: true
