--- a/config/sync/core.entity_view_display.paragraph.vih_class_groups_accordion.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_class_groups_accordion.default.yml
@@ -3,18 +3,43 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.vih_class_groups_accordion.field_background_color
+    - field.field.paragraph.vih_class_groups_accordion.field_background_image
+    - field.field.paragraph.vih_class_groups_accordion.field_heading
+    - field.field.paragraph.vih_class_groups_accordion.field_link
     - field.field.paragraph.vih_class_groups_accordion.field_vih_cg_single_class_groups
     - paragraphs.paragraphs_type.vih_class_groups_accordion
   module:
     - entity_reference_revisions
+    - link
 id: paragraph.vih_class_groups_accordion.default
 targetEntityType: paragraph
 bundle: vih_class_groups_accordion
 mode: default
 content:
+  field_heading:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_link:
+    type: link
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      trim_length: null
+      url_only: false
+      url_plain: false
+      rel: '0'
+      target: '0'
+    third_party_settings: {  }
   field_vih_cg_single_class_groups:
     type: entity_reference_revisions_entity_view
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       view_mode: default
@@ -24,5 +49,3 @@ content:
 hidden:
   field_background_color: true
   field_background_image: true
-  field_heading: true
-  field_link: true
