--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
@@ -1,9 +1,9 @@
-uuid: 01cf45ef-003e-4254-bbdb-b28d2707a4be
+uuid: 21523b98-0d88-4b64-8fe7-8a11162cba80
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.taxonomy_term.vih_class_table_teaser_modal
+    - core.entity_view_mode.taxonomy_term.list_advanced
     - field.field.taxonomy_term.vih_class.field_class_package_paragraph
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -11,10 +11,9 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - field.field.taxonomy_term.vih_class.field_vih_teacher_class_descr
-    - image.style.vih_class_teaser
+    - image.style.list_advanced
     - taxonomy.vocabulary.vih_class
   module:
-    - entity_reference_revisions
     - image
     - panelizer
     - text
@@ -24,35 +23,27 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: taxonomy_term.vih_class.vih_class_table_teaser_modal
+id: taxonomy_term.vih_class.list_advanced
 targetEntityType: taxonomy_term
 bundle: vih_class
-mode: vih_class_table_teaser_modal
+mode: list_advanced
 content:
   description:
-    type: text_default
-    weight: 1
-    region: content
     label: hidden
-    settings: {  }
+    type: text_trimmed
+    weight: 1
+    settings:
+      trim_length: 200
     third_party_settings: {  }
+    region: content
   field_vih_class_image:
     type: image
     weight: 0
     region: content
     label: hidden
     settings:
-      image_style: vih_class_teaser
+      image_style: list_advanced
       image_link: ''
-    third_party_settings: {  }
-  field_vih_teacher_class_descr:
-    type: entity_reference_revisions_entity_view
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
     third_party_settings: {  }
 hidden:
   field_class_package_paragraph: true
@@ -60,4 +51,5 @@ hidden:
   field_vih_class_color: true
   field_vih_class_material_price: true
   field_vih_class_price_addition: true
+  field_vih_teacher_class_descr: true
   langcode: true
