--- a/config/sync/field.field.node.vih_long_cource.field_vih_course_status.yml
+++ b/config/sync/field.field.node.vih_long_cource.field_vih_course_status.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: vih_long_cource
 label: Status
 description: ''
-required: false
+required: true
 translatable: false
 default_value:
   -
