--- a/config/sync/field.storage.node.field_vih_event_status.yml
+++ b/config/sync/field.storage.node.field_vih_event_status.yml
@@ -17,6 +17,9 @@ settings:
     -
       value: cancelled
       label: Cancelled
+    -
+      value: closed
+      label: Closed
   allowed_values_function: ''
 module: options
 locked: false
