--- a/docroot/themes/custom/site/src/compile-settings.json
+++ b/docroot/themes/custom/site/src/compile-settings.json
@@ -6,6 +6,9 @@
     "node_modules/bootstrap-sass/assets/javascripts/bootstrap/tab.js",
     "node_modules/bootstrap-sass/assets/javascripts/bootstrap/collapse.js",
     "node_modules/bootstrap-sass/assets/javascripts/bootstrap/transition.js",
+    "node_modules/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js",
+    "node_modules/bootstrap-sass/assets/javascripts/bootstrap/popover.js",
+    "node_modules/bootstrap-sass/assets/javascripts/bootstrap/modal.js",
     "src/javascripts/layout.js",
     "src/javascripts/jquery.cookie.js",
     "src/javascripts/modal-popup.js",
