Remove en language

--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -13,17 +13,17 @@ settings:
   default_form_details_toggle: true
   form_classes: "container-inline clearfix\nform--inline clearfix\nmessages messages--error\nmessages messages--warning\nmessages messages--status\n"
   button_classes: ''
-  default_wizard_prev_button_label: '< Previous Page'
-  default_wizard_next_button_label: 'Next Page >'
+  default_wizard_prev_button_label: '< Forrige side'
+  default_wizard_next_button_label: 'Næste side >'
   default_wizard_start_label: Start
-  default_wizard_confirmation_label: Complete
+  default_wizard_confirmation_label: Komplet
   default_preview_next_button_label: Preview
   default_preview_prev_button_label: '< Previous'
   default_preview_label: Preview
   default_preview_title: '[webform:title]: Preview'
   default_preview_message: 'Please review your submission. Your submission is not complete until you press the "Submit" button!'
-  default_draft_button_label: 'Save Draft'
-  default_draft_saved_message: 'Submission saved. You may return to this form later and it will restore the current values.'
+  default_draft_button_label: 'Gem kladde'
+  default_draft_saved_message: 'Formular gemt. Du kan vende tilbage senere og gendanne standardværdierne.'
   default_draft_loaded_message: 'A partially-completed form was found. Please complete the remaining portions.'
   default_confirmation_message: 'New submission added to [webform:title].'
   default_confirmation_back_label: 'Back to form'
