--- a/config/sync/webform.webform_options.months.yml
+++ b/config/sync/webform.webform_options.months.yml
@@ -9,5 +9,5 @@ _core:
   default_config_hash: 5VMrRfGXjK2HbORvpA_8j4-uBsAK_VSK6TS-NrGOBEg
 id: months
 label: Months
-category: 'Date and time'
+category: 'Dato og tid'
 options: "January: January\nFebruary: February\nMarch: March\nApril: April\nMay: May\nJune: June\nJuly: July\nAugust: August\nSeptember: September\nOctober: October\nNovember: November\nDecember: December\n"
