--- a/config/sync/webform.webform.contact.yml
+++ b/config/sync/webform.webform.contact.yml
@@ -121,7 +121,7 @@ access:
 handlers:
   email_confirmation:
     id: email
-    label: 'Email confirmation'
+    label: E-mail-bekræftelse
     handler_id: email_confirmation
     status: true
     conditions: {  }
@@ -137,7 +137,7 @@ handlers:
       bcc_options: {  }
       from_mail: default
       from_options: {  }
-      from_name: default
+      from_name: standard
       subject: '[webform_submission:values:subject:raw]'
       body: '[webform_submission:values:message:value]'
       excluded_elements: {  }
@@ -152,7 +152,7 @@ handlers:
       sender_name: ''
   email_notification:
     id: email
-    label: 'Email notification'
+    label: E-mail-notifikation
     handler_id: email_notification
     status: true
     conditions: {  }
