--- a/config/sync/webform.webform_options.gender.yml
+++ b/config/sync/webform.webform_options.gender.yml
@@ -8,6 +8,6 @@ dependencies:
 _core:
   default_config_hash: c5x62CEac0adja_twp51SAMoQxSMhUqub19onhvmuHM
 id: gender
-label: Gender
+label: Køn
 category: Demographic
 options: "Male: Male\nFemale: Female\nTransgender: Transgender\n"
