--- a/config/sync/webform.webform_options.time_zones.yml
+++ b/config/sync/webform.webform_options.time_zones.yml
@@ -9,5 +9,5 @@ _core:
   default_config_hash: zehf8ImCihNcfcB40ji4THIa8F8-BgC_fZ5_GDxgb0k
 id: time_zones
 label: 'Time zones'
-category: 'Date and time'
+category: 'Dato og tid'
 options: ''
