--- a/config/sync/taxonomy.vocabulary.vih_class_package.yml
+++ b/config/sync/taxonomy.vocabulary.vih_class_package.yml
@@ -2,7 +2,7 @@ uuid: 8832dbe9-efac-4578-8de2-b29d5851d05f
 langcode: zxx
 status: true
 dependencies: {  }
-name: 'Class Package'
+name: Fagpakker
 vid: vih_class_package
 description: ''
 hierarchy: 0
