--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "drupal/webform": "^5.0@beta",
         "drupal/examples": "1.x-dev",
         "drupal/layout_plugin": "^1.0@alpha",
-        "drupal/page_manager": "^4.0@beta"
+        "drupal/page_manager": "^4.0@beta",
+        "drupal/entity_clone": "1.x-dev"
     },
     "repositories": [
         {
