--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -23,6 +23,7 @@ module:
   entity: 0
   entity_block: 0
   entity_browser: 0
+  entity_clone: 0
   entity_embed: 0
   entity_reference: 0
   entity_reference_revisions: 0
